--- a/popup.html
+++ b/popup.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="popup.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="container">
-        <p id="bazinga">Bazinga</p>
-        <input id="downloadRange" type="range" min="1" max="100" step="1">
-        <div class="infoInput">
-            <input id="downloadCount" type="text">
-            <span>Images</span>
+    <section>
+        <div class="container bg-black text-light border border-success rounded bg-gradient p-3">
+            <h1 class="text-center text-success">Bazinga</h1>
+            <form id="form">
+                <div class="input-group">
+                    <span class="input-group-text border-success bg-success text-white fw-bold">Image Count:</span>
+                    <input type="text" id="image-count"
+                        class="form-control border-success bg-black bg-gradient text-white fw-bold" placeholder="..."
+                        value="20">
+                </div>
+                <input type="range" id="sldr-image-count" class="form-range" step="1" value="20" min="1" max="100">
+                <button type="submit" class="w-100 btn btn-outline-success bg-gradient">Download</button>
+            </form>
         </div>
-        <button id="downloadBtn">Download</button>    
-    </div>
+    </section>
     <script src="popup.js"></script>
 </body>
+
 </html>
